feat(sdk): Introduce comprehensive training and quiz module
This major feature introduces a complete training and quiz module, transforming the SDK from a simple element tracker into an interactive learning platform. The module allows users to browse, start, and complete training flows, take quizzes, and view their results.

The entire user experience is managed within a dedicated `FlowListNavHost`, ensuring a self-contained and seamless navigation flow from listing flows to completing them.

**Key Features & Changes:**

*   **Flow Listing and Management:**
    *   **Flow List Screen (`FlowListScreen.kt`):** A new screen that fetches and displays a list of available training flows for the app. It includes a dashboard-style header with statistics (available, completed, pending) and pull-to-refresh functionality.
    *   **API & Data Models (`GetFlowsListUseCase`, `FlowListResponseEntity`, `FlowListResponseContent`):** Added API calls and corresponding data models to retrieve the list of flows from the backend. The logic filters for active flows with steps.
    *   **Navigation (`FlowListNavHost.kt`):** A new `NavHost` manages navigation between the flow list, quiz screen, and completion screen.

*   **Quiz (Q&A) Functionality:**
    *   **Q&A Screen (`QnAScreen.kt`):** A screen to present questions with single or multiple-choice answers. It features a progress bar and navigation between questions.
    *   **API & Data Models (`GetQnAUseCase`, `CompleteQnAUseCase`, `QnaResponseEntity`):** Endpoints to fetch quiz questions (`/quiz/`) and submit answers (`/quiz/submit/`). Data models for questions, options, and submission have been added.

*   **Training Completion Flow:**
    *   **Completion Screen (`CompletedTrainingScreen.kt`):** A new, visually rich screen shown after a user completes a quiz. It displays the user's score with an animated progress ring, a grade (e.g., "Excellent!"), and confetti animations for high scores.
    *   **API & Data Models (`TrainingCompl

--- a/UIElementManager/src/main/res/values/strings.xml
+++ b/UIElementManager/src/main/res/values/strings.xml
@@ -5,4 +5,26 @@
     <string name="something_went_wrong_please_try_again_later">Something went wrong, please try again later</string>
     <string name="no_internet_connection_please_make_sure_your_device_is_connected_to_an_active_internet_connection">No internet connection. Please make sure your device is connected to an active internet connection.</string>
     <string name="dismiss">Dismiss</string>
+    <string name="ok">OK</string>
+    <string name="go_to_home">Go to Home</string>
+
+    <string name="start_next_flow">Start next flow</string>
+    <string name="untitled_flow">Untitled flow</string>
+
+
+    <string name="app_name">ExtractTagApp</string>
+
+    <string name="no_training_flows_available">No training flows available</string>
+    <string name="go_back">Go Back</string>
+    <string name="try_again">Try again</string>
+    <string name="cancel">Cancel</string>
+    <string name="training_platform">Training Platform</string>
+    <string name="available_flows">Available Flows</string>
+    <string name="completed">Completed</string>
+    <string name="pending">Pending</string>
+    <string name="not_started">Not Started</string>
+    <string name="no_description_available">No description available</string>
+    <string name="steps">Steps</string>
+    <string name="there_are_currently_no_training_flows_configured_for_please_check_back_later_or_contact_your_administrator">There are currently no training flows configured for please check back later or contact your administrator</string>
+
 </resources>
